# python-ohdsi

./: .celery-worker.env  .gitignore  .readthedocs.yml  Dockerfile  LICENSE  Makefile  README.md  VERSION  docker-compose.dev.yml  docker-compose.yml  requirements.txt
.github/workflows/: python-publish.yml  release.yml
api/: Dockerfile  docker-compose.yml  requirements.txt  run.py
api/src/: __init__.py  make_celery.py  resource.py  task.py
circe/: README.md  pyproject.toml  requirements.txt  setup.py
circe/ohdsi/circe/: __init__.py  convert.py
circe/ohdsi/circe/data/: conceptSet.json  conceptSetList.json
circe/test/: main.py
cohort-diagnostics/: README.md  pyproject.toml  requirements.txt  setup.py
cohort-generator/: README.md  pyproject.toml  setup.py
cohort-generator/tests/: main.py
common/: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
database-connector/: README.md  pyproject.toml  setup.py
database-connector/tests/: main.py
docs/: api.rst  changelog.rst  circe.rst  cohort_generator.rst  conf.py  database_connector.rst  index.rst  requirements.txt
docs/_static/: theme.puml
docs/api/: index.rst
docs/libraries/: circe.rst  feature_extraction.rst  index.rst  installation.rst  sql_render.rst
docs/source/: conf.py  index.rst
feature-extraction/: README.md  pyproject.toml  setup.py
feature-extraction/tests/: main.py
ohdsi-api/: Dockerfile  Makefile  README.md  requirements.txt  run.py
sqlrender/: README.md  pyproject.toml  requirements.txt  setup.py
tutorials/: using_circeR.ipynb  using_cohort_generator.ipynb  using_database_connector.ipynb  using_feature_extraction.ipynb  using_sql_render.ipynb
tutorials/input/: death_cohort_with_concept_sets.json
tutorials/using_circeR/: death_cohort_with_concept_sets.json  using_circeR.ipynb
tutorials/using_database_connector/: using_database_connector.ipynb
(+10 files in other folders)
