[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ohdsi-circe"
dynamic = ["version"]
description = "Python wrapper for the OHDSI R packages"
readme = "../README.md"
license = {file = "../LICENSE"}
requires-python = ">=3.13"
authors = [
    {name = "Vantage6 Team"}
]
maintainers = [
    {name = "Frank Martin", email = "f.martin@iknl.nl"},
    {name = "Bart van Beusekom", email = "b.vanbeusekom@iknl.nl"}
]
keywords = ["ohdsi", "omop", "healthcare", "r", "circe", "vantage6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "rpy2>=3.5.12,<4.0.0",
]

[project.urls]
Homepage = "https://github.com/vantage6/python-ohdsi"
Repository = "https://github.com/vantage6/python-ohdsi"
Documentation = "https://python-ohdsi.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/vantage6/python-ohdsi/issues"

[project.optional-dependencies]
dev = []

[tool.hatch.version]
path = "../VERSION"
pattern = '"(?P<version>.*)"'

[tool.hatch.build.targets.wheel]
packages = ["ohdsi/circe"]

[tool.hatch.build.targets.wheel.sources]
"ohdsi" = "ohdsi"

[tool.hatch.build.targets.sdist]
include = [
    "/ohdsi",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel.force-include]
"ohdsi/circe/data/*.json" = "ohdsi/circe/data/"
